kubernetes/truenas/apps/network/proxmox-proxy/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: proxmox
spec:
  ports:
    - name: https
      protocol: TCP
      port: 443
      targetPort: 8006
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: proxmox
  labels:
    kubernetes.io/service-name: proxmox
addressType: IPv4
ports:
  - name: https
    appProtocol: https
    protocol: TCP
    port: 8006
endpoints:
  - addresses:
      - 192.168.1.3
      - 192.168.1.4
      - 192.168.1.5
      - 192.168.1.6
